--- a/site/css/search.css
+++ b/site/css/search.css
@@ -26,7 +26,7 @@
 
 .hero-search .container {
   position: relative;
-  z-index: 1;
+  z-index: 100;
 }
 
 .hero-search-title {
@@ -51,6 +51,7 @@
   max-width: 720px;
   margin: 0 auto;
   position: relative;
+  z-index: 99999;
 }
 
 .search-box-hero .search-input-wrapper {
